--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,7 @@ packages =
 python_requires = >=3.6
 install_requires=
     docker
+    rich
 include_package_data = True
 
 [options.entry_points]
