--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,3 +43,73 @@ dockernel = "dockernel.__main__:main"
 [build-system]
 requires = ["pdm-backend"]
 build-backend = "pdm.backend"
+
+[tool.black]
+line-length = 120
+target-version = ['py39']
+
+[tool.mypy]
+python_version = "3.9"
+
+#follow_imports = "silent"
+warn_redundant_casts = true
+warn_unused_ignores = true
+#disallow_any_generics = true
+check_untyped_defs = true
+no_implicit_reexport = true
+
+disallow_untyped_defs = true
+
+[[tool.mypy.overrides]]
+module = [
+    "docker"
+]
+ignore_missing_imports = true
+
+[tool.ruff]
+line-length = 120
+
+# Enable Pyflakes `E` and `F` codes by default.
+select = [
+    # pyflakes
+    "F",
+    # pycodestyle
+    "E",
+    "W",
+    # isort
+    "I001",
+    # pyupgrade subset
+    "UP",
+]
+# src = []
+ignore = []
+fix = true
+
+# Exclude a variety of commonly ignored directories.
+exclude = [
+    ".bzr",
+    ".direnv",
+    ".eggs",
+    ".git",
+    ".hg",
+    ".mypy_cache",
+    ".nox",
+    ".pants.d",
+    ".ruff_cache",
+    ".svn",
+    ".tox",
+    ".venv",
+    "__pypackages__",
+    "_build",
+    "buck-out",
+    "build",
+    "dist",
+    "node_modules",
+    "venv",
+]
+per-file-ignores = {}
+
+target-version = "py39"
+
+[tool.ruff.mccabe]
+max-complexity = 10
