--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,6 @@
 [tool.pdm]
 [tool.pdm.dev-dependencies]
-dev = [
-    "mypy>=0.971",
-    "pytest>=7.0.1",
-]
+dev = ["mypy>=0.971", "pytest>=7.0.1"]
 
 [project]
 name = "dockernel"
@@ -57,13 +54,10 @@ warn_unused_ignores = true
 #disallow_any_generics = true
 check_untyped_defs = true
 no_implicit_reexport = true
-
 disallow_untyped_defs = true
 
 [[tool.mypy.overrides]]
-module = [
-    "docker"
-]
+module = ["docker"]
 ignore_missing_imports = true
 
 [tool.ruff]
